--- a/wu-school-adminweb-app/new-crown-outbreak/pom.xml
+++ b/wu-school-adminweb-app/new-crown-outbreak/pom.xml
@@ -59,5 +59,10 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>2.0.7</version>
+        </dependency>
     </dependencies>
 </project>
